--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "API project for freeCodeCamp",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "14.15.5"
   },
   "dependencies": {
     "cors": "^2.8.5",
